<resources>
    <string name="app_name">Gadgeothek</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="version_nr">Version 1.0</string>
    <string name="email_address">email address</string>
    <string name="password">password</string>
    <string name="keep_me_logged_in">keep me logged in</string>
    <string name="login">login</string>
    <string name="signup">signup</string>
    <string name="name">name</string>
    <string name="student_number">student number</string>
    <string name="condition">Condition</string>
    <string name="reserve">Reserve</string>
    <string name="price">Price</string>
    <string name="delete_reservation">Delete reservation</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="logout">Logout</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="reload">reload</string>
    <string name="gadgets">Gadgets</string>
    <string name="loans">Loans</string>
    <string name="reservations">Reservations</string>
    <string name="error_invalid_input">please provide a valid input</string>
    <string name="error_empty_input">please provide an input</string>
    <string name="error_login">Wrong username or password. Please check your library url too!</string>
    <string name="error_signup">An error occured during signup. Please try again later.</string>
    <string name="empty_reservations_title">No Reservations</string>
    <string name="empty_reservations_hint">Click on a gadget in the Gadgets Tab to add a reservation</string>
    <string name="logout_failed">Logout has failed 😭</string>
    <string name="has_been_reserved_at">Has been reserved at</string>
    <string name="lent_since">Lent since</string>
    <string name="return_until">Return until</string>
    <string name="loan_overdue">This loan is overdue since</string>
    <string name="waiting_position">Waiting Position:</string>
    <string name="reservation_ready">This gadget is ready to pickup!</string>
    <string name="change_server_url">Change Server Url</string>
    <string name="server_url">Server Url</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="reservation_failed">Reservation has failed 😭</string>
    <string name="confirm_reservation">Confirm Reservation</string>
    <string name="confirm_reservation_message">Do you want to reserve %s?</string>
    <string name="reservation_successful">Reservation successful!</string>
    <string name="del_reservation_failed">Deletion of reservation has failed 😭</string>
    <string name="confirm_del_reservation">Confirm Deletion</string>
    <string name="confirm_del_reservation_message">Do you want to delete your reservation of %s?</string>
    <string name="del_reservation_successful">Reservation has been successfully deleted!</string>
    <string name="failed_to_load_data">Failed to load data..</string>
    <string name="no_active_loans">No active loans</string>
    <string name="your_loans_will_be_shown_here">Your loans will be shown here</string>
    <string name="no_gadgets_available">No Gadgets available</string>
</resources>
