<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.hsr.gadgeothek.ui.SignupActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/versionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTextView"
        android:layout_gravity="bottom"
        android:layout_toEndOf="@id/titleTextView"
        android:layout_toRightOf="@id/titleTextView"
        android:maxLines="1"
        android:text="@string/version_nr"
        android:textSize="10sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/name_text_input_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@id/versionTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:hint="@string/name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/student_number_text_input_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@id/name_text_input_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/studentNumberEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:hint="@string/student_number" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_text_input_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@id/student_number_text_input_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp" >

        <EditText
            android:id="@+id/emailAddressEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/email_address" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_text_input_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@id/email_text_input_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp" >

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/password" />

    </android.support.design.widget.TextInputLayout>

    <Switch
        android:id="@+id/keepMeLoggedInSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keep_me_logged_in"
        android:checked="true"
        android:layout_below="@id/password_text_input_layout"
        android:layout_alignStart="@id/password_text_input_layout"
        android:layout_alignEnd="@id/password_text_input_layout" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:layout_below="@id/keepMeLoggedInSwitch"
        android:layout_alignStart="@id/keepMeLoggedInSwitch"/>

    <TextView
        android:id="@+id/changeServerAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signupButton"
        android:layout_alignStart="@id/signupButton"
        android:text="@string/change_server_url"
        android:layout_marginTop="8dp" />

</RelativeLayout>
