<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    tools:context="ch.hsr.gadgeothek.ui.fragment.GadgetDetailFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAppearance="@android:style/TextAppearance.Holo.Large"
        android:id="@+id/gadgetDetailNameTextView"
        tools:text="gadgetName"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gadgetDetailManufacturerTextView"
        tools:text="Manufacturer"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/gadgetDetailNameTextView"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gadgetDetailConditionLabel"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/gadgetDetailManufacturerTextView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gadgetDetailConditionTextView"
        tools:text="condition"
        android:textAppearance="@android:style/TextAppearance.Holo.Medium"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/gadgetDetailConditionLabel"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gadgetDetailPriceLabel"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/gadgetDetailConditionTextView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gadgetDetailPriceTextView"
        tools:text="price"
        android:textAppearance="@android:style/TextAppearance.Holo.Medium"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/gadgetDetailPriceLabel"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/reserve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gadgetDetailReserveBtn"
        android:layout_below="@+id/gadgetDetailPriceTextView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="79dp"
        tools:text="Reservieren" />

    <Button
        android:text="@string/delete_reservation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gadgetDetailDelReserveBtn"
        android:layout_below="@+id/gadgetDetailReserveBtn"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        tools:text="Reservierung löschen" />

</RelativeLayout>
